@@ -60,6 +60,7 @@
     <Compile Include="MachineTests.cs" />
     <Compile Include="Language\MethodTests.cs" />
     <Compile Include="Language\ObjectTests.cs" />
+    <Compile Include="NativeObjects\Rectangle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Compiler\LexerTests.cs" />
   </ItemGroup>
@@ -93,6 +94,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="CodeFiles\NativeRectangle.st">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="CodeFiles\DefineRectangleWithNewAndInitialize.st">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
