@@ -129,6 +129,12 @@ Host with first tests
 ObjectProxy WIP
 RemotingHostServer, RemotingHostClient, ClientObject, with tests
 
+2010-10-11
+Support in DotNativeObject for set properties, with tests
+Now, Method accepts IBehavior instead IClassDescription in constructor
+New example NativeRectangle.st with tests
+TypeUtilities for resolve types using .AsType(string). Type.GetType() only works in the calling assembly
+
 AgentObj
 
 Angel "Java" Lopez
